# book-mate

./: .env_template  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  init.sql  pyproject.toml
.github/workflows/: ci.yml
notebooks/: 03_modular_approach.ipynb  04_summarize.ipynb
src/app/: gist.py  ingest.py
src/content/: ground_truth.py  reader.py  store.py
src/flows/: book_ingest.py  book_query.py  evaluate_multibook.py  evaluate_readonly.py  evaluate_search.py  generate_ground_truth.py
src/llm/: generator.py
src/mcp_client/: agent.py  prompts.py
src/mcp_server/: book_tools.py  tool_handlers.py
src/monitoring/: dashboard.py  judge.py  metrics.py  persistence.py
src/search/: adaptive.py  bm25.py  eval.py  hybrid.py  vec.py
src/ui/: app.py  chat.py  ingest.py  monitoring.py  pattern_builder.py  utils.py
tests/: README.md  test_pattern_builder.py  test_search.py
